--- a/gb/20/1/16/n11797692.md
+++ b/gb/20/1/16/n11797692.md
@@ -1,62 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ldrwvv219/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>光纤智慧照护科技 元培医科大正式启用</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/eb6c1ab884debde436d1f6626eb0db04-600x400.jpg" />
 <h6>“智慧照护科技研发中心”，在元培医事科技大学正式启用。（林宝云／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年01月16日讯】（大纪元记者林宝云台湾新竹报导）全球首创的非侵入性<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%89%E7%BA%A4%E7%94%9F%E7%90%86%E7%9B%91%E6%B5%8B.md#1">光纤生理监测</a>技术“<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E7%85%A7%E6%8A%A4.md#1">智慧照护</a>科技研发中心”，16日在<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9%E5%8C%BB%E4%BA%8B%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">元培医事科技大学</a>正式启用，校长林志城、汇嘉董事长杨淑贞、前竹县县长邱镜淳、北美祥茂企业公司董事长黎焕忠董事长、新竹国泰医院副院长曾英智、中国医药大学新竹医院副院长阮春荣共同揭幕。</p>
-<figure id="11797695" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/4f9d4fbefeb60d90352990a556381d4d-450x338.jpg" alt="汇嘉董事长杨淑贞手中展示非侵入性光纤生理监测技术" width="500" /><figcaption class="wp-caption-text">汇嘉董事长杨淑贞手中展示非侵入性<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%89%E7%BA%A4%E7%94%9F%E7%90%86%E7%9B%91%E6%B5%8B.md#1">光纤生理监测</a>技术。（林宝云／大纪元）</figcaption></figure>
+<p>【大纪元2020年01月16日讯】（大纪元记者林宝云台湾新竹报导）全球首创的非侵入性<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%89%E7%BA%A4%E7%94%9F%E7%90%86%E7%9B%91%E6%B5%8B.md#1">光纤生理监测</a>技术“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E7%85%A7%E6%8A%A4.md#1">智慧照护</a>科技研发中心”，16日在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9%E5%8C%BB%E4%BA%8B%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">元培医事科技大学</a>正式启用，校长林志城、汇嘉董事长杨淑贞、前竹县县长邱镜淳、北美祥茂企业公司董事长黎焕忠董事长、新竹国泰医院副院长曾英智、中国医药大学新竹医院副院长阮春荣共同揭幕。</p>
+<figure id="11797695" aria-describedby="caption-11797695" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/4f9d4fbefeb60d90352990a556381d4d-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/4f9d4fbefeb60d90352990a556381d4d-450x338.jpg" alt="汇嘉董事长杨淑贞手中展示非侵入性光纤生理监测技术" width="500" /></a><figcaption id="caption-11797695" class="wp-caption-text">汇嘉董事长杨淑贞手中展示非侵入性<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%89%E7%BA%A4%E7%94%9F%E7%90%86%E7%9B%91%E6%B5%8B.md#1">光纤生理监测</a>技术。（林宝云／大纪元）</figcaption></figure>
 <p>全球面临少子化高龄化的冲击，台湾在2018年高龄人口（65岁以上人口）比例已超过14%。依据国发会推估，台湾将在2026年迈入“超高龄社会”，老化速度甚至远快于日本。并且预测，2065年台湾高龄人口比例将超过4成，届时台湾每1.2位生产者需负担1位老年人口。而根据内政部“中华民国人口统计年刊”2018年公布的数据显示，我国总生育率降为1.06人，在全世界更是敬陪末座。</p>
-<figure id="11797696" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/60a5f1bf8c3b6ba32cfe8456a5f5c3cb-450x338.jpg" alt="24小时多床位自动巡房系统" width="500" /><figcaption class="wp-caption-text">24小时多床位自动巡房系统。（林宝云／大纪元）</figcaption></figure>
-<p>林志城表示，<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9%E5%8C%BB%E4%BA%8B%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">元培医事科技大学</a>不仅是台湾第一所医事技术专门学校，更是全国大健康产业最重要的人才培育基地，期望今天这个“<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E7%85%A7%E6%8A%A4.md#1">智慧照护</a>科技研发中心”启用之后，能够顺利导入高科技在智慧照护的应用，元培与汇嘉产学合作也将提供元培医大学生实习与就业的机会，为国家培育更多智慧照护产业创新应用的人才。</p>
+<figure id="11797696" aria-describedby="caption-11797696" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/60a5f1bf8c3b6ba32cfe8456a5f5c3cb-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/60a5f1bf8c3b6ba32cfe8456a5f5c3cb-450x338.jpg" alt="24小时多床位自动巡房系统" width="500" /></a><figcaption id="caption-11797696" class="wp-caption-text">24小时多床位自动巡房系统。（林宝云／大纪元）</figcaption></figure>
+<p>林志城表示，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9%E5%8C%BB%E4%BA%8B%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">元培医事科技大学</a>不仅是台湾第一所医事技术专门学校，更是全国大健康产业最重要的人才培育基地，期望今天这个“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%BA%E6%85%A7%E7%85%A7%E6%8A%A4.md#1">智慧照护</a>科技研发中心”启用之后，能够顺利导入高科技在智慧照护的应用，元培与汇嘉产学合作也将提供元培医大学生实习与就业的机会，为国家培育更多智慧照护产业创新应用的人才。</p>
 <p>杨淑贞指出，此次展示中的一大特色为结合光纤科技的“24小时安全与健康自动巡房系统”，能够同时监测百万名独居老人的呼吸、心率、脉搏波、血压、睡眠分析等生理资讯，并在必要时通知照护人员给予紧急救助，更已有应用一年的养护中心场域，帮助照护人员在深夜成功抢救两位老人家宝贵生命的成功案例！证明此系统可以运用在有效纾解照护人力缺口与帮助老人紧急状态的问题上。此系统可应用于智慧医院、照护机构、更可以用于居家照护，实现在地老化,家中床位可以是养老床位的理想。</p>
-<figure id="11797697" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/e081a122f449a129a8b6a0edfb5f1ba7-450x338.jpg" alt="杨淑贞说明光纤科技的特色" width="500" /><figcaption class="wp-caption-text">杨淑贞说明光纤科技的特色。（林宝云／大纪元）</figcaption></figure>
+<figure id="11797697" aria-describedby="caption-11797697" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/e081a122f449a129a8b6a0edfb5f1ba7-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/e081a122f449a129a8b6a0edfb5f1ba7-450x338.jpg" alt="杨淑贞说明光纤科技的特色" width="500" /></a><figcaption id="caption-11797697" class="wp-caption-text">杨淑贞说明光纤科技的特色。（林宝云／大纪元）</figcaption></figure>
 <p>此技术获得2019国际艾奇奖金奖及全场大奖(ECI Awards)、2017全球百大科技研发奖(R&amp;D 100 Awards)、2017医疗品质奖智慧医院产业应用组、2016亚太资通讯大赛金牌(APICTA Awards)、国家新创奖。该技术研发近10年,超过230家妇幼医院,月子中心及托婴中心、养老中心采用。此次元培“智慧照护科技研发中心”现场展示了更多全球第一次亮相的光纤智慧照护领域之应用，见证新竹高科技水平在全世界的领先地位。</p>
-<figure id="11797698" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/63b97bc702450604ce56a99810a7726f-450x338.jpg" alt="系统可以运用在紧急状态问题上" width="500" /><figcaption class="wp-caption-text">系统可以运用在紧急状态问题上。（林宝云／大纪元）</figcaption></figure>
+<figure id="11797698" aria-describedby="caption-11797698" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/63b97bc702450604ce56a99810a7726f-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/63b97bc702450604ce56a99810a7726f-450x338.jpg" alt="系统可以运用在紧急状态问题上" width="500" /></a><figcaption id="caption-11797698" class="wp-caption-text">系统可以运用在紧急状态问题上。（林宝云／大纪元）</figcaption></figure>
 <p>责任编辑：英祯</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/6/5/n4451322.md#1">台防气爆重演 研发光纤监测管线</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/17/8/30/n9581826.md#1">南台科大整合医护效益 打造台南智慧照护</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/3/20/n10233249.md#1">美国哈佛大学与元培医事科技大学   签订合作意向书</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/9/11/n10706270.md#1">亚洲侨生保荐单位 参访元培医事科技大学</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/7/25/n11408533.md#1">新北智能卫生所签署 智慧照护大跃进</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/12/23/n11740340.md#1">台大与工研院、富士通携手合作 共创智慧高龄照护</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070148.md#1">表扬模范母亲 新竹县长亲自到府赠送匾额</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070249.md#1">疫情肆虐 清华弦歌不辍！2020年的校庆很特别</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070158.md#1">五一连假 到竹县两大乐园玩正是时候</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070256.md#1">医护辛苦了！竹三校赠餐点防疫品加油打气</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/6/5/n4451322.md#1">台防气爆重演 研发光纤监测管线</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/8/30/n9581826.md#1">南台科大整合医护效益 打造台南智慧照护</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/20/n10233249.md#1">美国哈佛大学与元培医事科技大学   签订合作意向书</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/11/n10706270.md#1">亚洲侨生保荐单位 参访元培医事科技大学</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/25/n11408533.md#1">新北智能卫生所签署 智慧照护大跃进</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/23/n11740340.md#1">台大与工研院、富士通携手合作 共创智慧高龄照护</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680722.md#1">工研院携手致茂办量测论文竞赛 培育技术人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680584.md#1">苗栗春祭暨遥祭黄陵联合祭典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680574.md#1">事迹受肯定 大千三位医事人员获优秀青年表扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678598.md#1">力积电董事长黄崇仁获颁阳明交大名誉博士</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147841.md#1" target="_blank">袁斌：河南信阳姜寨村大饥荒时代的往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065545.md#1">董卿刚刚辟谣 其老公密春雷“暴富史”被扒</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065576.md#1">专家：金正恩可能在视察导弹试射时受伤</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064980.md#1">【新闻看点】庚子年忧思疯传 北京麻烦有多少？</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064628.md#1">台劳工纾困贷款10万元 4月30日首批开放申请</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068456.md#1">疫情追查 传五眼联盟在调查石正丽周鹏</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062937.md#1">周星驰近况曝光 与林允隔空互动笑翻网络</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065497.md#1">罗志祥丑闻引抵制风波 陆综近亿酬金或成泡影</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064217.md#1">流浪猫带路人去买食物给它吃 结果被收养</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068100.md#1">台湾连续三天零确诊 林志玲用逗趣谐音表心情</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062791.md#1">圈内人相继染疫离世 日本名导北野武萌生退意</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/25/n12060433.md#1">为着神意而战 巴顿将军的为将之道</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/4/n12002808.md#1">仙境一来回九十年 采药人得寿五千年</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/19/n12044233.md#1">【历史上的瘟疫】科技难挡19世纪霍乱</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/3/n11999664.md#1">天地清明引(271) 众生劫－王终见王1</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/16/n11797692.htm">光纤智慧照护科技 元培医科大正式启用</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/16/n11797692.htm">光纤智慧照护科技 元培医科大正式启用</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ldrwvv219/djy/blob/master/gb/20/1/16/n11797692.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/1/16/n11797692.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
